--- a/style/components/contsct-us.css
+++ b/style/components/contsct-us.css
@@ -58,11 +58,11 @@
     font-weight: 500;
     color: #454545;
     cursor: pointer;
-    transition:color .4s linear;
+    transition: .2s linear;
 }
 
 #submit:hover {
-    background: transparent;
+    background: rgba(182, 155, 103, 0.17);
     border: 1px solid #454545;
     color: #b69b67;
 }
