--- a/style/style.css
+++ b/style/style.css
@@ -5,6 +5,8 @@
 @import "components/porfolio.css";
 @import "components/menu.css";
 @import "components/feedbacks.css";
-@import "components/contsct-us.css";
+@import "components/contact-us.css";
+@import "components/contact.css";
+@import "components/footer.css";
 
 
