--- a/style/components/common.css
+++ b/style/components/common.css
@@ -12,7 +12,7 @@ body {
     font-family: 'Ubuntu', sans-serif;
     font-weight: 300;
     color: #b4b4b4;
-    padding: 0 10% 100px;
+    padding: 0 10%;
 }
 
 .wrapper {
