--- a/style/components/porfolio.css
+++ b/style/components/porfolio.css
@@ -172,43 +172,20 @@ option {
     .slider {
         flex-direction: row;
         flex-wrap: wrap;
+        height: 900px;
     }
 
     .slider-item {
         flex-direction: row;
         width: 100%;
+        height: calc(24.5% - 7px);
+        padding-top: 0;
     }
 
     .slider-text {
         width: 50%;
         left: 50%;
         padding: 3% 4% 3%;
-    }
-
-    .slider-text h3 span {
-        font-size: 25px;
-    }
-
-
-    .slider-text p {
-        font-size: 20px;
-    }
-
-    .slider-text i {
-        font-size: 15px;
-    }
-}
-
-@media screen and (min-width: 768px) {
-    .slider {
-        max-height: 450px;
-        height: 50vw;
-    }
-
-    .slider-item {
-        width: 49%;
-        height: calc(50% - 7px);
-        padding-top: 0;
     }
 
     .slider-text h3 span {
@@ -225,6 +202,18 @@ option {
 
     .slider-text i {
         font-size: 10px;
+    }
+}
+
+@media screen and (min-width: 768px) {
+    .slider {
+        max-height: 450px;
+        height: 50vw;
+    }
+
+    .slider-item {
+        width: 49%;
+        height: calc(50% - 7px);
     }
 }
 
