--- a/style/components/porfolio.css
+++ b/style/components/porfolio.css
@@ -32,10 +32,14 @@ option {
 
 .slider {
     width: 100%;
-    display: flex;
+    display: none;
     flex-direction: column;
     justify-content: space-between;
     align-content: space-between;
+}
+
+.slider.active {
+    display: flex;
 }
 
 .slider-item {
@@ -83,22 +87,6 @@ option {
 
 .slider-item:hover {
     opacity: 1;
-}
-
-.slider-item:nth-child(1) {
-    background-image: url("../../images/1-hover.png");
-}
-
-.slider-item:nth-child(2) {
-    background-image: url("../../images/3-hover.png");
-}
-
-.slider-item:nth-child(3) {
-    background-image: url("../../images/2-hover.png");
-}
-
-.slider-item:nth-child(4) {
-    background-image: url("../../images/4-hover.png");
 }
 
 .slider-text {
