--- a/style/components/porfolio.css
+++ b/style/components/porfolio.css
@@ -33,7 +33,7 @@ option {
 .slider-wrap {
     position: relative;
     width: 100%;
-    height: 450px;
+    height: 535px;;
     overflow: hidden;
 }
 
@@ -188,6 +188,10 @@ option {
         flex-direction: row;
         flex-wrap: wrap;
         height: 900px;
+    }
+
+    .slider-wrap {
+        height: 450px;
     }
 
     .slider-item {
